# gresources

./: .gitignore  Cargo.toml  DESCRIPTION.md  LICENSE  README.md  Settings.toml  TEST_README.md  test_api.sh
.github/: copilot-instructions.md
db/: schema.sql
src/: database.rs  handlers.rs  lib.rs  logging.rs  main.rs  models.rs  settings.rs  validation.rs
tests/: models_tests.rs  test_api.bat  validation_tests.rs
