[package]
name = "gresources"
version = "1.0.0"
edition = "2021"

[lib]
name = "gresources"
path = "src/lib.rs"

[[bin]]
name = "gresources"
path = "src/main.rs"

[dependencies]
actix-web = "4.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
toml = "0.8"

